Added login functionality. CRUD for todo with jsp. Next: we will our login code as Spring Security will take care of that

--- a/myfirstwebapp/src/main/resources/application.properties
+++ b/myfirstwebapp/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.mvc.view.suffix=.jsp
 # Every class in the org.springframework package will log at the level mentioned here
 logging.level.org.springframework=info
 logging.level.com.in28minutes.springboot.myfirstwebapp=debug
+# mm stands for minutes that is why we used MM here
+spring.mvc.format.date=yyyy-MM-dd
