Todo functionality with a static list of todos. Next: connecting to H2 database for todo management

--- a/myfirstwebapp/src/main/resources/application.properties
+++ b/myfirstwebapp/src/main/resources/application.properties
@@ -7,3 +7,5 @@ logging.level.org.springframework=info
 logging.level.com.in28minutes.springboot.myfirstwebapp=debug
 # mm stands for minutes that is why we used MM here
 spring.mvc.format.date=yyyy-MM-dd
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.jpa.defer-datasource-initialization=true
