--- a/myfirstwebapp/src/main/resources/application.properties
+++ b/myfirstwebapp/src/main/resources/application.properties
@@ -8,4 +8,6 @@ logging.level.com.in28minutes.springboot.myfirstwebapp=debug
 # mm stands for minutes that is why we used MM here
 spring.mvc.format.date=yyyy-MM-dd
 spring.datasource.url=jdbc:h2:mem:testdb
+#By default, the data.sql is run before the entity is read by Spring i.e., before the table is even created. This leads to an error that is why we are configuring Spring not to run sql before the Entities are read.
 spring.jpa.defer-datasource-initialization=true
+spring.jpa.show-sql=true
