--- a/fullstack-app/todo-api/src/main/resources/application.properties
+++ b/fullstack-app/todo-api/src/main/resources/application.properties
@@ -1,3 +1,10 @@
 logging.level.org.springframework=info
-spring.security.user.name=in28minutes
-spring.security.user.password=dummy
+
+#The username and password for the Basic Spring Security is commented out right now as we are using JWT configuration and, we don't want Spring to pick this up.
+#spring.security.user.name=in28minutes
+#spring.security.user.password=dummy
+
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.h2.console.enabled=true
+
+spring.jpa.defer-datasource-initialization=true
